[package]
name = "stylus-insurance-calculator"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy", "defi"]
description = "Dynamic insurance fee calculator for Uniswap v4 pools based on volatility and risk metrics"

[dependencies]
alloy-primitives = "=0.7.6"
alloy-sol-types = { version = "=0.7.6" }
mini-alloc = "0.4.2"
stylus-sdk = "0.6.0"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
std = []

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
